<resources>
    <string name="CLIENT_ID">465288330290-5fltsfvvgatpcin692bekq6pu11soo15.apps.googleusercontent.com</string>
    <string name="DEVELOPER_KEY">AIzaSyAOvXKnqlAVIzSZpmBxvFEerYusQYAPklE</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="aboutBracu">BRAC University (BRACU) was established in 2001. It follows a liberal arts approach to education which nurtures fresh ideas and gives new impetus to the field of tertiary education. It ensures a high quality of education and aims to meet the demands of contemporary times.\10Building on BRAC\'s experience of seeking solutions to challenges posed by extreme poverty, BRACU hopes to instill in its students a commitment to working towards national development and progress. The medium of instruction and examination at BRAC University is English. BRACU is accredited by the University Grants Commission (UGC) and approved by the Ministry of Education, Government of Bangladesh.\10\10 MISSION\10 The mission of BRAC University is to foster the national development process through the creation of a centre of excellence in higher education that is responsive to society\'s needs, and able to develop creative leaders. It actively contributes to learning and the creation of knowledge.\10\10 GOAL\10 The goal of the University is to provide an excellent broad-based education with a focus on professional development for students, in order to equip them with the knowledge and skills necessary for leading the country in its quest for development. Along with this, the University provides an environment for faculty development to ensure a dynamic teaching environment. Faculty will be provided with an environment in which they can further their teaching-learning abilities and contribute to the creation of new knowledge by developing and using their research skills. </string>
    <string name="academicCalendar">Academic Calendar</string>
    <string name="academic_record">Academic Record:</string>
    <string name="academic_records">Academic Records :</string>
    <string name="academic_section">Academic Section:</string>
    <string name="academic_session">Academic Session:</string>
    <string name="academic_year">Academic Year:</string>
    <string name="action_ok">OK</string>
    <string name="action_restart">Restart</string>
    <string name="action_settings">Settings</string>
    <string name="address_66_mohakhali">66 Mohakhali</string>
    <string name="address_dhaka_1212">Dhaka 1212</string>
    <string name="address_info_bracu_ac_bd">info@bracu.ac.bd</string>
    <string name="admission_label">Admission :</string>
    <string name="advisedCourse">Advised Course</string>
    <string name="advised_courses">Advised Courses</string>
    <string name="app_name">BRACU Mobile</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply_online">Apply online</string>
    <string name="asad">http://172.16.46.24:8080/academia</string>
    <string name="asking_logout_consent">Do you want to logout?</string>
    <string name="attempted">Attempted</string>
    <string name="bangladesh">Bangladesh</string>
    <string name="base_url">@string/live_server</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bracu_anthem">BRACU Anthem</string>
    <string name="cafe_header">&lt;font &gt; The University’s &lt;b&gt;Cafeteria&lt;/b&gt; offers snacks and drinks as well as hot and cold meals for breakfast and lunch and snacks in the evening. There are a total of three Cafeterias at BRAC University. All the &lt;b&gt;Cafeterias&lt;/b&gt; are great places to &lt;b&gt;HANG OUT&lt;/b&gt;.&lt;br/&gt; &lt;/font&gt;</string>
    <string name="cafe_location1">&lt;p&gt; &lt;h3&gt;Cafeteria # 1&lt;/h3&gt; Located on the ground floor of University Building # 1. This is the main cafeteria and offers a wide assortment of foods for breakfast, lunch, and afternoon snacks. &lt;/p&gt;</string>
    <string name="cafe_location2">&lt;p&gt; &lt;h3&gt;Cafeteria # 2&lt;/h3&gt; Located on the ground floor of University Building # 3 with limited seating capacity, but you can enjoy all kinds of food items similar to those in the main Cafeteria. &lt;/p&gt;</string>
    <string name="cafe_location3">&lt;p&gt; &lt;h3&gt;Cafeteria # 3 (Prangan) &lt;/h3&gt; Located on the 1st floor of University Building # 1.Prangan is an open-air garden with a capacity of more than one hundred students. This area includes a snack bar that serves tea, coffee, and snacks. &lt;/p&gt;</string>
    <string name="cafe_schedule">&lt;p&gt; &lt;h2&gt;Cafeteria Hour&lt;/h2&gt; &lt;b&gt;SUNDAY – THURSDAY&lt;/b&gt;&lt;br/&gt; &lt;font &gt;7:30 a.m – 7:30 p.m.&lt;/font&gt;&lt;br/&gt; &lt;br/&gt; [&lt;i&gt;&lt;font &gt;All Cafeterias will remain closed on Fridays, Saturdays and National holidays&lt;/i&gt;&lt;/font&gt;] &lt;/p&gt;</string>
    <string name="cafeteria_location">Cafeteria Location</string>
    <string name="call">Call</string>
    <string name="cannot_connect_please_check_your_connection">Cannot connect to the server. Please check your internet connection.</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_sms_or_notification">Please check at least one of SMS and Notification methods.</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_theme">Choose theme</string>
    <string name="classSchedule">Class schedule</string>
    <string name="class_schedule">Class Schedule</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="e_mail">Email:</string>
    <string name="earned">Earned</string>
    <string name="enter_notification_subject">Enter notification subject</string>
    <string name="exam_schedule">Exam Schedule</string>
    <string name="menu_explore_results">Explore Results</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_result">Result</string>
    <string name="message_outbox">Message Outbox</string>
    <string name="navigation_next">&gt;</string>
    <string name="navigation_prev">&lt;</string>
    <string name="no_data_found">No data found.</string>
    <string name="no_messages_available_for_you">No messages available for you.</string>
    <string name="notification_message">Notification message</string>
    <string name="point">Point</string>
    <string name="qr_reader">QR Reader</string>
    <string name="received_messages">Received Messages</string>
    <string name="sample_phone_number">+8801670000000</string>
    <string name="send_notification">Send Message</string>
    <string name="send_notification_title">Send Notification</string>
    <string name="sent_messages">Delivered Messages</string>
    <string name="social">Social</string>
    <string name="student_id">Student ID</string>
    <string name="student_name">Student Name</string>
    <string name="text_about">About</string>
    <string name="text_admissions">Admission</string>
    <string name="text_announcements">Announcement</string>
    <string name="text_cafeteria">Cafeteria</string>
    <string name="text_calendar">Calendar</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_contacts">Contacts</string>
    <string name="text_course">Course</string>
    <string name="text_dspace">DSPACE</string>
    <string name="text_events">Events</string>
    <string name="text_feedback">Feedback</string>
    <string name="text_full_website">Full Website</string>
    <string name="text_grade">Grade</string>
    <string name="text_library">Library</string>
    <string name="text_links">Links</string>
    <string name="text_lms">LMS</string>
    <string name="text_location_map">Location Map</string>
    <string name="text_logout">Logout</string>
    <string name="text_miscellaneous">Miscellaneous</string>
    <string name="text_news">News</string>
    <string name="text_notice">Notice</string>
    <string name="text_notification">Notification</string>
    <string name="text_notifications">Notifications</string>
    <string name="text_photos">Photos</string>
    <string name="text_send">Send</string>
    <string name="text_session">Session</string>
    <string name="text_sms">SMS</string>
    <string name="text_user_login">User Login</string>
    <string name="text_videos">Videos</string>
    <string name="university_address">University Address</string>
</resources>