<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <group android:id="@+id/group_top" android:checkableBehavior="single">
        <item android:icon="@drawable/ic_person_white" android:id="@+id/nav_profile" android:title="@string/menu_my_profile"/>
        <item android:icon="@drawable/ic_schedule" android:id="@+id/nav_faculty_class_schedule" android:title="@string/class_schedule"/>
        <item android:icon="@drawable/ic_result_white" android:id="@+id/nav_result" android:title="@string/menu_explore_results"/>
        <item android:icon="@drawable/ic_send_message" android:id="@+id/nav_send_notification" android:title="@string/send_notification"/>
        <item android:icon="@drawable/ic_received_message" android:id="@+id/nav_notification" android:title="@string/received_messages"/>
        <item android:icon="@drawable/ic_sent_message" android:id="@+id/nav_sent_notification" android:title="@string/sent_messages"/>
        <item android:icon="@drawable/ic_sent_message" android:id="@+id/nav_message_outbox" android:title="@string/message_outbox"/>
        <item android:icon="@drawable/ic_user_logout" android:id="@+id/nav_faculty_logout" android:title="@string/text_logout"/>
    </group>
    <group android:id="@+id/group_middle" android:checkableBehavior="none">
        <item android:icon="@drawable/ic_settings" android:id="@+id/nav_common_settings" android:title="@string/action_settings"/>
    </group>
    <group android:id="@+id/group_bottom" android:checkableBehavior="none">
        <item android:icon="@drawable/ic_miscellaneous" android:id="@+id/nav_faculty_miscellaneous" android:title="@string/text_miscellaneous"/>
    </group>
</menu>
