<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@drawable/theme_background_gradient" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="@dimen/text_size_21sp" android:gravity="center" android:id="@+id/tv_unavailable_message" android:visibility="visible" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/no_data_found"/>
    <LinearLayout android:orientation="vertical" android:id="@+id/ll_student_result_info" android:visibility="visible" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/tv_unavailable_message">
        <LinearLayout android:orientation="vertical" android:background="@drawable/theme_background_gradient" android:padding="@dimen/standard_padding_8dp" android:paddingTop="20dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/text_size_20" android:textStyle="bold" android:layout_gravity="start" android:id="@+id/tv_student_id" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/student_id" android:paddingStart="10dp"/>
            <TextView android:textSize="@dimen/text_size_20" android:textStyle="bold" android:layout_gravity="start" android:id="@+id/tv_student_full_name" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/student_name" android:paddingStart="10dp"/>
            <LinearLayout android:padding="@dimen/standard_padding_8dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="14sp" android:textStyle="bold" android:layout_gravity="center" android:layout_width="40dp" android:layout_height="20dp" android:text="@string/text_course" android:layout_weight="1" android:paddingStart="0dp" android:layout_marginStart="0dp"/>
                <TextView android:textSize="14sp" android:textStyle="bold" android:gravity="center" android:layout_gravity="center" android:layout_width="70dp" android:layout_height="20dp" android:text="@string/attempted" android:layout_weight="1" android:paddingStart="2dp" android:layout_marginStart="0dp"/>
                <TextView android:textSize="14sp" android:textStyle="bold" android:gravity="center" android:layout_gravity="center" android:layout_width="50dp" android:layout_height="20dp" android:text="@string/earned" android:layout_weight="1" android:paddingStart="3dp" android:layout_marginStart="0dp"/>
                <TextView android:textSize="14sp" android:textStyle="bold" android:gravity="center" android:layout_gravity="center" android:layout_width="40dp" android:layout_height="20dp" android:text="@string/text_grade" android:layout_weight="1" android:paddingStart="2dp" android:layout_marginStart="0dp"/>
                <TextView android:textSize="14sp" android:textStyle="bold" android:gravity="center" android:layout_gravity="center" android:layout_width="40dp" android:layout_height="20dp" android:text="@string/point" android:layout_weight="1" android:paddingStart="2dp" android:layout_marginStart="0dp"/>
            </LinearLayout>
        </LinearLayout>
        <ListView android:id="@+id/lv_student_result_list" android:background="@android:color/transparent" android:padding="@dimen/dimens_5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:listSelector="@android:color/transparent" android:divider="@android:color/transparent" android:dividerHeight="@dimen/dimens_5dp"/>
    </LinearLayout>
</RelativeLayout>
